A bunch of fixes for warnings and old code